bourbon, sidebar, bg

--- a/source/_sidebar.html.haml
+++ b/source/_sidebar.html.haml
@@ -1,21 +1,24 @@
-.sidebar.pure-u-1.pure-u-md-1-5
+.sidebar.pure-u-1.pure-u-md-1-6
   .header
-    %h1.brand-title Ok
-    %h2.brand-tagline Fixed Sidebar
+    %h1.brand-title Arctic noise
+    %h2.brand-tagline Фотоработы
     %nav.nav
       %ul.nav-list
-        %li.nav-item
-          %a.pure-button{:href => "#"} One
-        %li.nav-item
-          %a.pure-button{:href => "#"} Two
+        %li.nav-item= link_to 'Портрет', '#'
+        %li.nav-item= link_to 'Репортаж', '#'
+        %li.nav-item= link_to 'Предметы', '#'
+        %li.nav-item= link_to 'Город', '#'
+        %li.nav-item= link_to 'Сцена', '#'
+        %li.nav-item= link_to 'Животные', '#'
+        %li.nav-item= link_to 'Спорт', '#'
 
-    .pure-menu.pure-menu-open
-      %ul
-        %li.pure-menu-heading Видео
-        %li= link_to 'Раздел', '#'
-        %li= link_to 'Раздел', '#'
-        %li= link_to 'Раздел', '#'
-        %li.pure-menu-heading Фото
-        %li= link_to 'Раздел', '#'
-        %li= link_to 'Раздел', '#'
-        %li= link_to 'Раздел', '#'
+    %h2.brand-tagline Видеоработы
+    %nav.nav
+      %ul.nav-list
+        %li.nav-item= link_to 'Портрет', '#'
+        %li.nav-item= link_to 'Репортаж', '#'
+        %li.nav-item= link_to 'Предметы', '#'
+        %li.nav-item= link_to 'Город', '#'
+        %li.nav-item= link_to 'Сцена', '#'
+        %li.nav-item= link_to 'Животные', '#'
+        %li.nav-item= link_to 'Спорт', '#'
