--- a/source/_sidebar.html.haml
+++ b/source/_sidebar.html.haml
@@ -1,5 +1,5 @@
-.sidebar.pure-u-1.pure-u-md-1-6
-  .header
+#sidebar.sidebar.pure-u-1.pure-u-md-1-6
+  .header#scrollme
     %h1.brand-title Arctic noise
     %h2.brand-tagline Фотоработы
     %nav.nav
