--- a/source/index.html.haml
+++ b/source/index.html.haml
@@ -3,7 +3,7 @@ title: First Page
 body_class: index
 ---
 
-.content.pure-u-1.pure-u-md-3-4
+.content.pure-u-1.pure-u-md-18-24
   %div
     %h1.content-subhead Content Subhead
 
@@ -11,5 +11,8 @@ body_class: index
       %div
         Message
 
-        =link_to 'Button', '/', class: 'pure-button pure-button-primary'
-
+        =link_to 'Button', '#', class: 'pure-button'
+      %p
+        lalala
+      %p
+        lalala
