--- a/source/stylesheets/application.css.scss
+++ b/source/stylesheets/application.css.scss
@@ -9,8 +9,11 @@
 
 body {
     font-family: $monospace;
-    background: url(../images/wall6.jpg) no-repeat fixed;
-    background-size: cover;
+    //background: url(../video/vid1.mp4) no-repeat fixed;
+    //background-size: contain;
+    background-color: $black;
+    //width: 100%;
+    //height: 100%;
 }
 
 .pure-g [class*="pure-u"]{
@@ -48,14 +51,14 @@ h3 {
 
 .header {
     text-align: center;
-    top: auto;
-    margin: 1em auto;
+    top: 0;
+    margin: 1em 0;
 }
 
 .sidebar {
-    background: $navy;
+    background: rgba(0,0,0,0.8);
     color: #fff;
-    padding: 1em;
+    padding: 1em 0;
 }
 
 .brand-title,
@@ -65,14 +68,16 @@ h3 {
 .brand-title {
     text-transform: uppercase;
     margin-bottom: 4%;
+    letter-spacing: 0em;
 }
 .brand-tagline {
     font-weight: 500;
-    font-size: 100%;
+    font-size: 80%;
     color: #aaa;//rgb(176, 202, 219);
     letter-spacing: 0.05em;
     text-transform: uppercase;
     margin-top: 5%;
+    margin-bottom: 5%;
 }
 
 .nav-list {
@@ -93,7 +98,7 @@ h3 {
     margin-top: 1em;
     letter-spacing: 0.2em;
     //text-transform: uppercase;
-    font-size: 85%;
+    font-size: 100%;
     font-weight: 700;
 
 }
@@ -141,26 +146,32 @@ h3 {
     }
 
     .header {
-        margin: 10% 2em 0;
+        //padding: 10%;
+        //margin: 3em;
         text-align: right;
+        padding-right: 5%;
     }
 
     .brand-tagline {
-        margin-top: 33%;
+        margin-top: 20%;
+    }
+
+    .brand-title {
+        margin-bottom: 0%;
     }
 
     .sidebar {
         position: fixed;
         top: 0;
         bottom: 0;
+        overflow: auto;
+        //outline: none;
     }
 
     .nav-item {
       display: list-item;
       //*display: inline;
-      margin-top: 5%;
+      margin-top: 3%;
     }
 }
-
-
 
