bg video update

--- a/source/_sidebar.html.haml
+++ b/source/_sidebar.html.haml
@@ -1,6 +1,7 @@
 #sidebar.sidebar.pure-u-1.pure-u-md-1-6
   .header#scrollme
-    %h1.brand-title Arctic noise
+    %h1.brand-title Григорий Чернявский |
+    %strong +7_987_567_54_54
     %h2.brand-tagline Фотоработы
     %nav.nav
       %ul.nav-list
