--- a/source/stylesheets/_modules/video.css.scss
+++ b/source/stylesheets/_modules/video.css.scss
@@ -1,5 +1,5 @@
 video#video_background {
-position: absolute;
+position: fixed;
 bottom: 0;
 right: 0;
 min-width: 100%;
@@ -7,13 +7,15 @@ min-height: 100%;
 width: auto;
 height: auto;
 z-index: -1000;
+background-image: url("../images/dog.jpg");
+background-size: cover;
 //overflow: hidden;
 }
 
 #video_pattern {
 background-image: url("../images/pattern.png");
 position: fixed;
-opacity: 0.8;
+opacity: 0.6;
 left: 0px;
 top: 0px;
 width: 100%;
