--- a/source/stylesheets/_modules/fadein.css.scss
+++ b/source/stylesheets/_modules/fadein.css.scss
@@ -4,9 +4,9 @@
 
 .fadein {
   opacity: 0;
-  -webkit-transition: opacity 3.25s ease-in;
-  -moz-transition: opacity 3.25s ease-in;
-  -o-transition: opacity 3.25s ease-in;
-  -ms-transition: opacity 3.25s ease-in;
-  transition: opacity 3.25s ease-in;
+  -webkit-transition: opacity 6.25s ease;
+  -moz-transition: opacity 6.25s ease;
+  -o-transition: opacity 6.25s ease;
+  -ms-transition: opacity 6.25s ease;
+  transition: opacity 6.25s ease;
 }
