--- a/source/index.html.haml
+++ b/source/index.html.haml
@@ -1,18 +1,21 @@
 ---
-title: First Page
 body_class: index
 ---
 
-.content.pure-u-1.pure-u-md-18-24
-  %div
-    %h1.content-subhead Content Subhead
 
-    %section
-      %div
-        Message
+%section.intro
+  %video#video_background.fadein{:autoplay => "true", :loop => "loop", :muted => "muted", :preload => "auto", :volume => "0"}
+    %source{:src => "videos/vid1.webm", :type => "video/webm"}
+    %source{:src => "videos/vid1.mp4", :type => "video/mp4"}
+    Video not supported
+  #video_pattern
 
-        =link_to 'Button', '#', class: 'pure-button'
-      %p
-        lalala
-      %p
-        lalala
+  .intro-body 
+    %h1 Григорий Чернявский
+
+    %h4 
+      Клипмейкер, видеооператор, фотограф. 
+    %h4  
+      Фото- и видеосъемка в Москве.
+    .intro-triangle
+  
