--- a/source/stylesheets/_modules/video.css.scss
+++ b/source/stylesheets/_modules/video.css.scss
@@ -13,12 +13,15 @@ background-size: cover;
 }
 
 #video_pattern {
-background-image: url("../images/pattern.png");
+background: url("../images/pattern.png");
+//background-size: cover;
 position: fixed;
-opacity: 0.6;
+opacity: 0.8;
 left: 0px;
 top: 0px;
-width: 100%;
-height: 100%;
+min-width: 100%;
+min-height: 100%;
+width: auto;
+height: auto;
 z-index: -100;
 }
