--- a/source/stylesheets/application.css.scss
+++ b/source/stylesheets/application.css.scss
@@ -1,23 +1,38 @@
 @import 'bourbon';
-@import 'pure-min';
 @import 'clrs';
+@import 'pure-min';
 @import 'font-awesome';
 @import '_modules/*';
+@import 'sections';
+@import 'header';
 
-//@import url(http://fonts.googleapis.com/css?family=Open+Sans:400,300,700&subset=latin,cyrillic);
+
+
+
+@import url(http://fonts.googleapis.com/css?family=Open+Sans:400,300,700,800&subset=latin,cyrillic);
 
 
 body {
-    font-family: $monospace;
-    //background: url(../video/vid1.mp4) no-repeat fixed;
-    //background-size: contain;
-    background-color: $black;
+    font-family: "Open Sans", sans-serif;
+    //background: url(../images/bg.jpg) fixed;
+    //background-size: cover;
+    //background-color: #D0021B;
     //width: 100%;
     //height: 100%;
+    //padding-top: 5%;
 }
 
+body.index {
+  background-color: #D0021B;
+}
+
+body.photo {
+  background: url(../images/dog.jpg) fixed;
+  background-size: cover;
+  background-color: $gray;
+}
 .pure-g [class*="pure-u"]{
-    font-family: $monospace;
+    font-family: "Open Sans", sans-serif;
 }
 
 * {
@@ -35,6 +50,7 @@ a:focus {
     text-decoration: underline;
 }
 
+
 h3 {
     font-weight: 100;
 }
@@ -49,68 +65,6 @@ h3 {
     padding: 0;
 }
 
-.header {
-    text-align: center;
-    top: 0;
-    margin: 1em 0;
-}
-
-.sidebar {
-    background: rgba(0,0,0,0.8);
-    color: #fff;
-    padding: 1em 0;
-}
-
-.brand-title,
-.brand-tagline {
-    margin: 0;
-}
-.brand-title {
-    text-transform: uppercase;
-    margin-bottom: 4%;
-    letter-spacing: -1px;
-    text-shadow: 3px 0px $black;
-}
-.brand-tagline {
-    font-weight: 500;
-    font-size: 80%;
-    color: #aaa;//rgb(176, 202, 219);
-    letter-spacing: 0.05em;
-    text-transform: uppercase;
-    margin-top: 5%;
-    margin-bottom: 5%;
-}
-
-.nav-list {
-    margin: 0;
-    padding: 0;
-    list-style: none;
-}
-.nav-item {
-    display: inline-block;
-    *display: inline;
-    zoom: 1;
-}
-
-.nav-item a {
-    background: transparent;
-    border-bottom: 1px solid rgba(176, 202, 219, 0.4);
-    color: #ccc;
-    margin-top: 1em;
-    letter-spacing: 0.2em;
-    //text-transform: uppercase;
-    font-size: 100%;
-    font-weight: 700;
-
-}
-.nav-item a:hover,
-.nav-item a:focus {
-    color: $white;
-    border-bottom: 1px solid $white;
-    text-decoration: none;
-    background-color: $black;
-    @include transition (all 0.5s ease-in-out);
-}
 
 .content-subhead {
     text-transform: uppercase;
@@ -123,60 +77,57 @@ h3 {
 }
 
 .content {
-    padding: 2em;
+    //padding: 2em;
+    margin-bottom: 5%;
 }
 
 
 
 .footer {
-    text-align: center;
-    padding: 1em 0;
+  position: fixed;
+  bottom: 0;
+  text-align: center;
+  width: 100%;
+  min-width: 100%;
+  background-color: rgba(0,0,0,0.3);
+
+  
+  .home ul,
+  .social ul {
+    list-style: none;
+    display: inline;
+    li {
+      display: inline;
+      font-size: 1.5em;
+      background-color: rgba(0,0,0,0.3);
+      padding: 0 3% 0 3%;
+      
+    }
+  }
+  .social {
+
+  }
+  .home {
+    //text-align: left;
+  }
+
+  a {
+    color: $gray;
+    text-decoration: none;
+    @include transition (all 0.5s ease-in-out);
+    &:hover{
+      color: #d0021a 
+    }
+  }
+
 }
-.footer a {
-    color: #ccc;
-    font-size: 80%;
-}
-.footer .pure-menu a:hover,
-.footer .pure-menu a:focus {
-    background: none;
-}
+
+
 
 @media (min-width: 48em) {
     .content {
-        padding: 2em 0 0;
-        margin-left: 20%;
-    }
-
-    .header {
-        //padding: 10%;
-        //margin: 3em;
-        text-align: right;
-        padding-right: 5%;
-    }
-
-    .brand-tagline {
-        margin-top: 20%;
-    }
-
-    .brand-title {
-        margin-bottom: 0%;
-        font-size: 150%;
-        border-right: 5px solid $silver;
-    }
-
-    .sidebar {
-        position: fixed;
-        top: 0;
-        bottom: 0;
-        overflow: auto;
-        //outline: none;
-        border-right: 1px solid $gray;
-    }
-
-    .nav-item {
-      display: list-item;
-      //*display: inline;
-      margin-top: 3%;
+        //padding: 2em 0 0;
+        
     }
 }
 
