--- a/source/index.html.haml
+++ b/source/index.html.haml
@@ -5,17 +5,10 @@ body_class: index
 
 %section.intro
   %video#video_background.fadein{:autoplay => "true", :loop => "loop", :muted => "muted", :preload => "auto", :volume => "0"}
-    %source{:src => "videos/vid1.webm", :type => "video/webm"}
-    %source{:src => "videos/vid1.mp4", :type => "video/mp4"}
+    %source{:src => "assets/videos/vid1.webm", :type => "video/webm"}
+    %source{:src => "assets/videos/vid1.mp4", :type => "video/mp4"}
     Video not supported
   #video_pattern
 
-  .intro-body 
-    %h1 Григорий Чернявский
 
-    %h4 
-      Клипмейкер, видеооператор, фотограф. 
-    %h4  
-      Фото- и видеосъемка в Москве.
-    .intro-triangle
   
