--- a/source/photo/animals.html.haml
+++ b/source/photo/animals.html.haml
@@ -1,16 +1,42 @@
 ---
 title: 'Фотоработы: животные'
-body_class: photo
+body_class: photo-animals
 ---
 
 %section.photo-section
-  %h4.section-name Фото/животные
-  .gallery#gallery.js-masonry{"data-masonry-options" => "{ \"columnWidth\": 100, \"itemSelector\": \".item\" }"}
-    .item=image_tag '/images/wall6.jpg'
-    .item2=image_tag '/images/dog.jpg'
-    .item=image_tag '/images/wall6.jpg'
-    .item2=image_tag '/images/wall6.jpg'
-    .item=image_tag '/images/wall6.jpg'
-    .item2=image_tag '/images/wall6.jpg'
-    .item=image_tag '/images/wall6.jpg'
-    .item2=image_tag '/images/wall6.jpg'
+  %h4.section-name Фотоработы/животные
+
+  #container
+    .element#box
+      =link_to  "http://cs616516.vk.me/v616516633/1c363/lWAzWz6_FB0.jpg", class: 'zoombox zgallery1' do 
+        =image_tag "http://cs616516.vk.me/v616516633/1c363/lWAzWz6_FB0.jpg"
+    .element#box
+      =link_to  "http://cs616516.vk.me/v616516633/1c36b/MCo_Q8WUzIE.jpg", class: 'zoombox zgallery1' do
+        =image_tag "http://cs616516.vk.me/v616516633/1c36b/MCo_Q8WUzIE.jpg" 
+    .element#box
+      =link_to  "http://cs616516.vk.me/v616516633/1c373/fSpmuQ1C0kc.jpg", class: 'zoombox zgallery1' do
+        =image_tag "http://cs616516.vk.me/v616516633/1c373/fSpmuQ1C0kc.jpg"
+    .element#box
+      =link_to  "http://cs616516.vk.me/v616516633/1c37b/xXU2cNAYGSA.jpg", class: 'zoombox zgallery1' do
+        =image_tag "http://cs616516.vk.me/v616516633/1c37b/xXU2cNAYGSA.jpg"
+    .element#box
+      =link_to  "http://cs616516.vk.me/v616516633/1c383/ArL0Rp9Bm08.jpg", class: 'zoombox zgallery1' do 
+        =image_tag "http://cs616516.vk.me/v616516633/1c383/ArL0Rp9Bm08.jpg"
+    .element#box
+      =link_to  "http://cs616516.vk.me/v616516633/1c38b/EWOdeBHacSE.jpg", class: 'zoombox zgallery1' do
+        =image_tag "http://cs616516.vk.me/v616516633/1c38b/EWOdeBHacSE.jpg"
+    .element#box
+      =link_to  "http://cs616516.vk.me/v616516633/1c393/ZPcrHfmYVcc.jpg", class: 'zoombox zgallery1' do
+        =image_tag "http://cs616516.vk.me/v616516633/1c393/ZPcrHfmYVcc.jpg"
+    .element#box
+      =link_to  "http://cs620129.vk.me/v620129633/109a5/-AMOADDWAwE.jpg", class: 'zoombox zgallery1' do 
+        =image_tag "http://cs620129.vk.me/v620129633/109a5/-AMOADDWAwE.jpg"
+    .element#box
+      =link_to  "http://cs620129.vk.me/v620129633/109ad/Jt2fiSqDVms.jpg", class: 'zoombox zgallery1' do
+        =image_tag "http://cs620129.vk.me/v620129633/109ad/Jt2fiSqDVms.jpg"
+    .element#box
+      =link_to  "http://cs620129.vk.me/v620129633/109b6/majU3-AQHkU.jpg", class: 'zoombox zgallery1' do 
+        =image_tag "http://cs620129.vk.me/v620129633/109b6/majU3-AQHkU.jpg" 
+    .element#box
+      =link_to  "http://cs620129.vk.me/v620129633/109bf/n7I_z3M9aoI.jpg", class: 'zoombox zgallery1' do
+        =image_tag "http://cs620129.vk.me/v620129633/109bf/n7I_z3M9aoI.jpg"
