--- a/source/photo/object.html.haml
+++ b/source/photo/object.html.haml
@@ -1,65 +1,42 @@
 ---
 title: 'Фотоработы: предметная фотосъемка'
-body_class: photo
+body_class: photo-object
 ---
 
 %section.photo-section
-  %h4.section-name Фото/предмет
+  %h4.section-name Фотоработы/предметы
 
-  .pure-g#photo-content
-    .pure-u-1-1.pure-u-lg-1-2
-      .i-box
-        =link_to "#" do
-          =image_tag lorem.image('1000x1000'), class: 'pure-img-responsive'
-          .i-box-overlay
-          .i-box-caption
-            %span Зверушка красивая прекрасная любимая чудная неповторимая экзистенциально непознаваемая абстрактная неприхотливая
-    .pure-u-1-1.pure-u-lg-1-2
-      .i-box
-        =link_to "#" do
-          =image_tag '/images/dog.jpg', class: 'pure-img-responsive'
-          .i-box-overlay
-          .i-box-caption
-            %span Зверушка красивая прекрасная любимая чудная неповторимая экзистенциально непознаваемая абстрактная неприхотливая
-    .pure-u-1-1.pure-u-lg-1-2
-      .i-box
-        =link_to "#" do
-          =image_tag lorem.image('1000x1000'), class: 'pure-img-responsive'
-          .i-box-overlay
-          .i-box-caption
-            %span Зверушка красивая прекрасная любимая чудная неповторимая экзистенциально непознаваемая абстрактная неприхотливая
-    .pure-u-1-1.pure-u-lg-1-2
-      .i-box
-        =link_to "#" do
-          =image_tag lorem.image('1000x1000'), class: 'pure-img-responsive'
-          .i-box-overlay
-          .i-box-caption
-            %span Зверушка красивая прекрасная любимая чудная неповторимая экзистенциально непознаваемая абстрактная неприхотливая
-    .pure-u-1-1.pure-u-lg-1-2
-      .i-box
-        =link_to "#" do
-          =image_tag lorem.image('1000x1000'), class: 'pure-img-responsive'
-          .i-box-overlay
-          .i-box-caption
-            %span Зверушка красивая прекрасная любимая чудная неповторимая экзистенциально непознаваемая абстрактная неприхотливая
-    .pure-u-1-1.pure-u-lg-1-2
-      .i-box
-        =link_to "#" do
-          =image_tag lorem.image('1000x1000'), class: 'pure-img-responsive'
-          .i-box-overlay
-          .i-box-caption
-            %span Зверушка красивая прекрасная любимая чудная неповторимая экзистенциально непознаваемая абстрактная неприхотливая
-    .pure-u-1-1.pure-u-lg-1-2
-      .i-box
-        =link_to "#" do
-          =image_tag lorem.image('1000x1000'), class: 'pure-img-responsive'
-          .i-box-overlay
-          .i-box-caption
-            %span Зверушка красивая прекрасная любимая чудная неповторимая экзистенциально непознаваемая абстрактная неприхотливая
-    .pure-u-1-1.pure-u-lg-1-2
-      .i-box
-        =link_to "#" do
-          =image_tag lorem.image('1000x1000'), class: 'pure-img-responsive'
-          .i-box-overlay
-          .i-box-caption
-            %span Зверушка красивая прекрасная любимая чудная неповторимая экзистенциально непознаваемая абстрактная неприхотливая
+  #container
+    .element#box
+      =link_to  "http://cs616516.vk.me/v616516633/1c615/PtMnVPr20FI.jpg", class: 'zoombox zgallery1' do
+        =image_tag "http://cs616516.vk.me/v616516633/1c615/PtMnVPr20FI.jpg"
+    .element#box
+      =link_to  "http://cs616516.vk.me/v616516633/1c61e/S0_fIS25S5g.jpg", class: 'zoombox zgallery1' do 
+        =image_tag "http://cs616516.vk.me/v616516633/1c61e/S0_fIS25S5g.jpg"
+    .element#box
+      =link_to  "http://cs616516.vk.me/v616516633/1c60c/qA_sq8lDb90.jpg", class: 'zoombox zgallery1' do
+        =image_tag "http://cs616516.vk.me/v616516633/1c60c/qA_sq8lDb90.jpg" 
+    .element#box
+      =link_to  "http://cs616516.vk.me/v616516633/1c5fb/SAMCDMXWCBw.jpg", class: 'zoombox zgallery1' do
+        =image_tag "http://cs616516.vk.me/v616516633/1c5fb/SAMCDMXWCBw.jpg"
+    .element#box
+      =link_to  "http://cs616516.vk.me/v616516633/1c5f3/KPPgv461Bcg.jpg", class: 'zoombox zgallery1' do
+        =image_tag "http://cs616516.vk.me/v616516633/1c5f3/KPPgv461Bcg.jpg"
+    .element#box
+      =link_to  "http://cs616516.vk.me/v616516633/1c5eb/ApNQD3vT9sY.jpg", class: 'zoombox zgallery1' do 
+        =image_tag "http://cs616516.vk.me/v616516633/1c5eb/ApNQD3vT9sY.jpg"
+    .element#box
+      =link_to  "http://cs616516.vk.me/v616516633/1c5e3/G3F3SyQV47w.jpg", class: 'zoombox zgallery1' do
+        =image_tag "http://cs616516.vk.me/v616516633/1c5e3/G3F3SyQV47w.jpg"
+    .element#box
+      =link_to  "http://cs616516.vk.me/v616516633/1c5db/iXwzTQlquXw.jpg", class: 'zoombox zgallery1' do
+        =image_tag "http://cs616516.vk.me/v616516633/1c5db/iXwzTQlquXw.jpg"
+    .element#box
+      =link_to  "http://cs616516.vk.me/v616516633/1c5d3/im3uPtmgCGU.jpg", class: 'zoombox zgallery1' do 
+        =image_tag "http://cs616516.vk.me/v616516633/1c5d3/im3uPtmgCGU.jpg"
+    .element#box
+      =link_to  "http://cs616516.vk.me/v616516633/1c5cb/FU4jOCnkqBA.jpg", class: 'zoombox zgallery1' do
+        =image_tag "http://cs616516.vk.me/v616516633/1c5cb/FU4jOCnkqBA.jpg"
+    .element#box
+      =link_to  "http://cs616516.vk.me/v616516633/1c604/jJ1OWWN3XVc.jpg", class: 'zoombox zgallery1' do 
+        =image_tag "http://cs616516.vk.me/v616516633/1c604/jJ1OWWN3XVc.jpg" 
