--- a/source/photo/portrait.html.haml
+++ b/source/photo/portrait.html.haml
@@ -1,25 +1,61 @@
 ---
 title: 'Фотоработы: портрет'
-body_class: photo
+body_class: photo-portrait
 ---
 
-%section.photo-section
-  %h4.section-name Фото/портрет
 
-  .pure-g
-    .pure-u-1-2.pure-u-lg-1-4
-      =image_tag lorem.image('1000x1000'), class: 'pure-img-responsive'
-    .pure-u-1-2.pure-u-lg-1-4
-      =image_tag lorem.image('1000x1000'), class: 'pure-img-responsive'
-    .pure-u-1-2.pure-u-lg-1-4
-      =image_tag lorem.image('1000x1000'), class: 'pure-img-responsive'
-    .pure-u-1-2.pure-u-lg-1-4
-      =image_tag lorem.image('1000x1000'), class: 'pure-img-responsive'
-    .pure-u-1-2.pure-u-lg-1-4
-      =image_tag lorem.image('1000x1000'), class: 'pure-img-responsive'
-    .pure-u-1-2.pure-u-lg-1-4
-      =image_tag lorem.image('1000x1000'), class: 'pure-img-responsive'
-    .pure-u-1-2.pure-u-lg-1-4
-      =image_tag lorem.image('1000x1000'), class: 'pure-img-responsive'
-    .pure-u-1-2.pure-u-lg-1-4
-      =image_tag lorem.image('1000x1000'), class: 'pure-img-responsive'
+%section.photo-section
+  %h4.section-name Фотоработы/портрет
+
+  #container
+    .element#box
+      =link_to  "http://cs616516.vk.me/v616516633/1c45e/gE9pfv0w8QE.jpg", class: 'zoombox zgallery1' do
+        =image_tag  "http://cs616516.vk.me/v616516633/1c45e/gE9pfv0w8QE.jpg"
+    .element#box
+      =link_to  "http://cs616516.vk.me/v616516633/1c466/QnCCHlckSj4.jpg", class: 'zoombox zgallery1' do 
+        =image_tag  "http://cs616516.vk.me/v616516633/1c466/QnCCHlckSj4.jpg"
+    .element#box
+      =link_to  "http://cs616516.vk.me/v616516633/1c46e/ohVmIcmU560.jpg", class: 'zoombox zgallery1' do
+        =image_tag  "http://cs616516.vk.me/v616516633/1c46e/ohVmIcmU560.jpg"
+    .element#box
+      =link_to  "http://cs616516.vk.me/v616516633/1c43e/QZyxkCuMdxI.jpg", class: 'zoombox zgallery1' do
+        =image_tag  "http://cs616516.vk.me/v616516633/1c43e/QZyxkCuMdxI.jpg"
+    .element#box
+      =link_to  "http://cs616516.vk.me/v616516633/1c446/mZXQSEy938Q.jpg", class: 'zoombox zgallery1' do 
+        =image_tag  "http://cs616516.vk.me/v616516633/1c446/mZXQSEy938Q.jpg"
+    .element#box
+      =link_to  "http://cs616516.vk.me/v616516633/1c44e/iKT5jPMDoiU.jpg", class: 'zoombox zgallery1' do
+        =image_tag  "http://cs616516.vk.me/v616516633/1c44e/iKT5jPMDoiU.jpg" 
+    .element#box
+      =link_to  "http://cs616516.vk.me/v616516633/1c456/HE1pYs_HYIE.jpg", class: 'zoombox zgallery1' do
+        =image_tag  "http://cs616516.vk.me/v616516633/1c456/HE1pYs_HYIE.jpg"
+    .element#box
+      =link_to  "http://cs616516.vk.me/v616516633/1c476/PtS4RSs6HDM.jpg", class: 'zoombox zgallery1' do
+        =image_tag  "http://cs616516.vk.me/v616516633/1c476/PtS4RSs6HDM.jpg"
+    .element#box
+      =link_to  "http://cs616516.vk.me/v616516633/1c47e/TTZI_NCtYII.jpg", class: 'zoombox zgallery1' do 
+        =image_tag  "http://cs616516.vk.me/v616516633/1c47e/TTZI_NCtYII.jpg"
+    .element#box
+      =link_to  "http://cs616516.vk.me/v616516633/1c48e/VxMpuMQkc7o.jpg", class: 'zoombox zgallery1' do
+        =image_tag  "http://cs616516.vk.me/v616516633/1c48e/VxMpuMQkc7o.jpg"
+    .element#box
+      =link_to  "http://cs616516.vk.me/v616516633/1c496/JZey9XIx-KM.jpg", class: 'zoombox zgallery1' do 
+        =image_tag  "http://cs616516.vk.me/v616516633/1c496/JZey9XIx-KM.jpg" 
+    .element#box
+      =link_to  "http://cs616516.vk.me/v616516633/1c49e/ffyAWODOO9k.jpg", class: 'zoombox zgallery1' do
+        =image_tag  "http://cs616516.vk.me/v616516633/1c49e/ffyAWODOO9k.jpg"
+    .element#box
+      =link_to  "http://cs616516.vk.me/v616516633/1c4a6/OKSvWY4208Y.jpg", class: 'zoombox zgallery1' do
+        =image_tag  "http://cs616516.vk.me/v616516633/1c4a6/OKSvWY4208Y.jpg"
+    .element#box
+      =link_to  "http://cs620129.vk.me/v620129633/109ce/_xMpDUu2DMo.jpg", class: 'zoombox zgallery1' do 
+        =image_tag  "http://cs620129.vk.me/v620129633/109ce/_xMpDUu2DMo.jpg"
+    .element#box
+      =link_to  "http://cs620129.vk.me/v620129633/109d6/3VX03W1zL2k.jpg", class: 'zoombox zgallery1' do
+        =image_tag  "http://cs620129.vk.me/v620129633/109d6/3VX03W1zL2k.jpg"
+    .element#box
+      =link_to  "http://cs620031.vk.me/v620031633/edd0/Z7qcDZB1T_8.jpg", class: 'zoombox zgallery1' do 
+        =image_tag "http://cs620031.vk.me/v620031633/edd0/Z7qcDZB1T_8.jpg" 
+    .element#box
+      =link_to  "http://cs620031.vk.me/v620031633/edd9/IOe3CG0nzTQ.jpg", class: 'zoombox zgallery1' do 
+        =image_tag "http://cs620031.vk.me/v620031633/edd9/IOe3CG0nzTQ.jpg" 
