--- a/source/photo/reportage.html.haml
+++ b/source/photo/reportage.html.haml
@@ -1,25 +1,45 @@
 ---
 title: 'Фотоработы: репортаж'
-body_class: photo
+body_class: photo-reportage
 ---
 
 %section.photo-section
-  %h4.section-name Фото/репортаж
+  %h4.section-name Фотоработы/репортаж
 
-  .pure-g
-    .pure-u-1-2.pure-u-lg-1-4
-      =image_tag lorem.image('1000x1000'), class: 'pure-img-responsive'
-    .pure-u-1-2.pure-u-lg-1-4
-      =image_tag lorem.image('1000x1000'), class: 'pure-img-responsive'
-    .pure-u-1-2.pure-u-lg-1-4
-      =image_tag lorem.image('1000x1000'), class: 'pure-img-responsive'
-    .pure-u-1-2.pure-u-lg-1-4
-      =image_tag lorem.image('1000x1000'), class: 'pure-img-responsive'
-    .pure-u-1-2.pure-u-lg-1-4
-      =image_tag lorem.image('1000x1000'), class: 'pure-img-responsive'
-    .pure-u-1-2.pure-u-lg-1-4
-      =image_tag lorem.image('1000x1000'), class: 'pure-img-responsive'
-    .pure-u-1-2.pure-u-lg-1-4
-      =image_tag lorem.image('1000x1000'), class: 'pure-img-responsive'
-    .pure-u-1-2.pure-u-lg-1-4
-      =image_tag lorem.image('1000x1000'), class: 'pure-img-responsive'
+  #container
+    .element#box
+      =link_to  "http://cs620031.vk.me/v620031633/ed63/XIxrzDbMSqM.jpg", class: 'zoombox zgallery1' do 
+        =image_tag "http://cs620031.vk.me/v620031633/ed63/XIxrzDbMSqM.jpg"
+    .element#box
+      =link_to  "http://cs620031.vk.me/v620031633/ed48/1Kug-__oLKQ.jpg", class: 'zoombox zgallery1' do
+        =image_tag "http://cs620031.vk.me/v620031633/ed48/1Kug-__oLKQ.jpg"
+    .element#box
+      =link_to  "http://cs620031.vk.me/v620031633/edb5/DU0QLHa8mJY.jpg", class: 'zoombox zgallery1' do
+        =image_tag "http://cs620031.vk.me/v620031633/edb5/DU0QLHa8mJY.jpg" 
+    .element#box
+      =link_to  "http://cs620031.vk.me/v620031633/ed5a/vb5tFmEvBgw.jpg", class: 'zoombox zgallery1' do 
+        =image_tag "http://cs620031.vk.me/v620031633/ed5a/vb5tFmEvBgw.jpg"
+    .element#box
+      =link_to  "http://cs620031.vk.me/v620031633/ed7f/pnynnmMo-iE.jpg", class: 'zoombox zgallery1' do
+        =image_tag "http://cs620031.vk.me/v620031633/ed7f/pnynnmMo-iE.jpg"
+    .element#box
+      =link_to  "http://cs620031.vk.me/v620031633/ed88/TZHN5pCu4fs.jpg", class: 'zoombox zgallery1' do
+        =image_tag "http://cs620031.vk.me/v620031633/ed88/TZHN5pCu4fs.jpg"
+    .element#box
+      =link_to  "http://cs620031.vk.me/v620031633/ed3f/XS7DJ2kMmu4.jpg", class: 'zoombox zgallery1' do 
+        =image_tag "http://cs620031.vk.me/v620031633/ed3f/XS7DJ2kMmu4.jpg"
+    .element#box
+      =link_to  "http://cs620031.vk.me/v620031633/edac/IBBPTXfBn3E.jpg", class: 'zoombox zgallery1' do
+        =image_tag "http://cs620031.vk.me/v620031633/edac/IBBPTXfBn3E.jpg"
+    .element#box
+      =link_to  "http://cs620031.vk.me/v620031633/eda3/u_0llZM8g6k.jpg", class: 'zoombox zgallery1' do
+        =image_tag "http://cs620031.vk.me/v620031633/eda3/u_0llZM8g6k.jpg"
+    .element#box
+      =link_to  "http://cs620031.vk.me/v620031633/ed9a/u2RQo80Vopw.jpg", class: 'zoombox zgallery1' do 
+        =image_tag "http://cs620031.vk.me/v620031633/ed9a/u2RQo80Vopw.jpg"
+    .element#box
+      =link_to  "http://cs620031.vk.me/v620031633/ed91/nAinUFFzUMY.jpg", class: 'zoombox zgallery1' do
+        =image_tag "http://cs620031.vk.me/v620031633/ed91/nAinUFFzUMY.jpg"
+    .element#box
+      =link_to  "http://cs620031.vk.me/v620031633/ed6c/JIJpX9yUyn0.jpg", class: 'zoombox zgallery1' do
+        =image_tag "http://cs620031.vk.me/v620031633/ed6c/JIJpX9yUyn0.jpg"
