--- a/source/video/portrait.html.haml
+++ b/source/video/portrait.html.haml
@@ -1,1 +1,14 @@
-%h1 Video Portrait
+---
+title: 'Видеоработы: модельные тесты/видеопортреты'
+body_class: video-portrait
+---
+
+%section.video-section
+  %h4.section-name Видеоработы/модельные тесты, видеопортреты
+
+  #container
+    .video-container.element
+      %iframe{:allowfullscreen => "", :frameborder => "0", :src => "//www.youtube.com/embed/HkbHt5xxQ_o?rel=0"}
+
+    .video-container.element
+      %iframe{:allowfullscreen => "", :frameborder => "0", :src => "//www.youtube.com/embed/tkO6zRDnJHQ"}
