--- a/source/layouts/layout.html.haml
+++ b/source/layouts/layout.html.haml
@@ -11,8 +11,10 @@
     %title #{data.page.title ? data.page.title + " | Григорий Чернявский - фотография и видеосъемка" : "Григорий Чернявский | Фотография и видеосъемка"}
     %meta(http-equiv="content-type" content="text/html" charset="utf-8")
     %meta(http-equiv="x-ua-compatible" content="ie=edge,chrome=1")
-    %meta(name="description" content="")
-    %meta(name="author" content="")
+    %meta(name='robots' content='all')
+    %meta(name='keywords' content='фотосъемка в москве, видеосъемка в москве, видеооператор, фотограф, снять клип, репортаж, видео, фото, Григорий Чернявский')
+    %meta(name="description" content="Вебсайт и портфолио Григория Чернявского - клипмейкера, видеооператора, фотографа. Незаурядная фото- и видеосъемка в Москве.")
+    %meta(name="author" content="Винцент Илинич")
 
 
     -# Standard viewport tag to set the viewport to the device's width,
@@ -25,46 +27,50 @@
     %meta(name='apple-mobile-web-app-capable' content='yes')
     %meta(name='apple-mobile-web-app-status-bar-style' content='black-translucent')
 
-    %link{:href => "images/favicon.ico", :rel => "shortcut icon", :type => "image/x-icon"}
-    %link{:href => "images/favicon.ico", :rel => "icon", :type => "image/x-icon"}
+    %link{:href => "http://ilinicz.github.io/anoise/favicon.ico", :rel => "shortcut icon", :type => "image/x-icon"}
+    %link{:href => "http://ilinicz.github.io/anoise/favicon.ico", :rel => "icon", :type => "image/x-icon"}
 
     -# App Icons
-    %link(rel="shortcut icon" href="images/favicon.ico")
+    %link(rel="shortcut icon" href="http://ilinicz.github.io/anoise/favicon.ico")
     %link(rel="apple-touch-icon-precomposed" href="/images/apple-touch-icon-precomposed.png")
     %link(rel="apple-touch-icon-precomposed" sizes="57x57" href="/images/apple-touch-icon-57x57-precomposed.png")
     %link(rel="apple-touch-icon-precomposed" sizes="72x72" href="/images/apple-touch-icon-72x72-precomposed.png")
     %link(rel="apple-touch-icon-precomposed" sizes="114x114" href="/images/apple-touch-icon-114x114-precomposed.png")
 
     -# Stylesheets
+
     = stylesheet_link_tag 'application'
+    = stylesheet_link_tag '/zoombox/zoombox.css'
 
     %link{:href => "http://yui.yahooapis.com/pure/0.5.0/grids-responsive-min.css", :rel => "stylesheet"}/
   %body{class: current_page.data.body_class || 'page'}
-    #layout.pure-g
-      //= partial 'sidebar'
-      .pure-u-1
-        = partial 'header'
-      .content.pure-u-1
+    #layout.pure-g    
+      = partial 'sidebar'
+      .content.pure-u-1.pure-u-md-5-6.fadein
         = yield
       .pure-u-1
         = partial 'footer'
     -# Javascripts
     = javascript_include_tag '//cdnjs.cloudflare.com/ajax/libs/modernizr/2.6.2/modernizr.min.js'
     = javascript_include_tag '//cdnjs.cloudflare.com/ajax/libs/jquery/2.0.3/jquery.min.js'
-    = javascript_include_tag '//cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js'
+
+    -#= javascript_include_tag '//cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js'
+    
+    = javascript_include_tag '/zoombox/zoombox.js'
+
+
     = javascript_include_tag 'application'
-
-    /= javascript_include_tag 'lib/jquery.nicescroll.js'
-
-    /= javascript_include_tag 'lib/jquery.wookmark.js'
 
     
 
-    - if build?
-      -# Google Analytics
-      :javascript
-        var _gaq=[['_setAccount','UA-XXXXX-X'],['_trackPageview']];
-        (function(d,t){var g=d.createElement(t),s=d.getElementsByTagName(t)[0];
-        g.src=('https:'==location.protocol?'//ssl':'//www')+'.google-analytics.com/ga.js';
-        s.parentNode.insertBefore(g,s)}(document,'script'));
+    
+  
+  -#  - if build?
+  -#    -# Google Analytics
+  -#    :javascript
+  -#      var _gaq=[['_setAccount','UA-XXXXX-X'],['_trackPageview']];
+  -#      (function(d,t){var g=d.createElement(t),s=d.getElementsByTagName(t)[0];
+  -#      g.src=('https:'==location.protocol?'//ssl':'//www')+'.google-analytics.com/ga.js';
+  -#      s.parentNode.insertBefore(g,s)}(document,'script'));
+
 
