--- a/source/photo/city.html.haml
+++ b/source/photo/city.html.haml
@@ -1,25 +1,60 @@
 ---
 title: 'Фотоработы: город'
-body_class: photo
+body_class: photo-city
 ---
 
 %section.photo-section
-  %h4.section-name Фото/город
+  %h4.section-name Фотоработы/город
 
-  .pure-g
-    .pure-u-1-2.pure-u-lg-1-4
-      =image_tag lorem.image('1000x1000'), class: 'pure-img-responsive'
-    .pure-u-1-2.pure-u-lg-1-4
-      =image_tag lorem.image('1000x1000'), class: 'pure-img-responsive'
-    .pure-u-1-2.pure-u-lg-1-4
-      =image_tag lorem.image('1000x1000'), class: 'pure-img-responsive'
-    .pure-u-1-2.pure-u-lg-1-4
-      =image_tag lorem.image('1000x1000'), class: 'pure-img-responsive'
-    .pure-u-1-2.pure-u-lg-1-4
-      =image_tag lorem.image('1000x1000'), class: 'pure-img-responsive'
-    .pure-u-1-2.pure-u-lg-1-4
-      =image_tag lorem.image('1000x1000'), class: 'pure-img-responsive'
-    .pure-u-1-2.pure-u-lg-1-4
-      =image_tag lorem.image('1000x1000'), class: 'pure-img-responsive'
-    .pure-u-1-2.pure-u-lg-1-4
-      =image_tag lorem.image('1000x1000'), class: 'pure-img-responsive'
+  #container
+    .element#box
+      =link_to  "http://cs616516.vk.me/v616516633/1c509/79g7hlWXGcc.jpg", class: 'zoombox zgallery1' do
+        =image_tag "http://cs616516.vk.me/v616516633/1c509/79g7hlWXGcc.jpg"
+    .element#box
+      =link_to  "http://cs616516.vk.me/v616516633/1c511/v3MtA4ab3mM.jpg", class: 'zoombox zgallery1' do 
+        =image_tag "http://cs616516.vk.me/v616516633/1c511/v3MtA4ab3mM.jpg"
+    .element#box
+      =link_to  "http://cs616516.vk.me/v616516633/1c519/qpWgXomKAMo.jpg", class: 'zoombox zgallery1' do
+        =image_tag "http://cs616516.vk.me/v616516633/1c519/qpWgXomKAMo.jpg" 
+    .element#box
+      =link_to  "http://cs616516.vk.me/v616516633/1c521/iv61Alaydvg.jpg", class: 'zoombox zgallery1' do
+        =image_tag "http://cs616516.vk.me/v616516633/1c521/iv61Alaydvg.jpg"
+    .element#box
+      =link_to  "http://cs616516.vk.me/v616516633/1c539/x2IP6yEhueo.jpg", class: 'zoombox zgallery1' do
+        =image_tag "http://cs616516.vk.me/v616516633/1c539/x2IP6yEhueo.jpg"
+    .element#box
+      =link_to  "http://cs616516.vk.me/v616516633/1c541/Hyoh1sUBXHA.jpg", class: 'zoombox zgallery1' do 
+        =image_tag "http://cs616516.vk.me/v616516633/1c541/Hyoh1sUBXHA.jpg"
+    .element#box
+      =link_to  "http://cs616516.vk.me/v616516633/1c549/2WAi6UVpxGU.jpg", class: 'zoombox zgallery1' do
+        =image_tag "http://cs616516.vk.me/v616516633/1c549/2WAi6UVpxGU.jpg"
+    .element#box
+      =link_to  "http://cs616516.vk.me/v616516633/1c551/54ryV6iiU6Y.jpg", class: 'zoombox zgallery1' do
+        =image_tag "http://cs616516.vk.me/v616516633/1c551/54ryV6iiU6Y.jpg"
+    .element#box
+      =link_to  "http://cs616516.vk.me/v616516633/1c559/QqPw7ppGPPA.jpg", class: 'zoombox zgallery1' do 
+        =image_tag "http://cs616516.vk.me/v616516633/1c559/QqPw7ppGPPA.jpg"
+    .element#box
+      =link_to  "http://cs616516.vk.me/v616516633/1c561/GSmM2fpij7c.jpg", class: 'zoombox zgallery1' do
+        =image_tag "http://cs616516.vk.me/v616516633/1c561/GSmM2fpij7c.jpg"
+    .element#box
+      =link_to  "http://cs616516.vk.me/v616516633/1c569/CFu4-CCOqd0.jpg", class: 'zoombox zgallery1' do 
+        =image_tag "http://cs616516.vk.me/v616516633/1c569/CFu4-CCOqd0.jpg" 
+    .element#box
+      =link_to  "http://cs616516.vk.me/v616516633/1c4d1/U-Oni4HJM_Q.jpg", class: 'zoombox zgallery1' do
+        =image_tag "http://cs616516.vk.me/v616516633/1c4d1/U-Oni4HJM_Q.jpg"
+    .element#box
+      =link_to  "http://cs616516.vk.me/v616516633/1c4d9/Zg5O6vJGASs.jpg", class: 'zoombox zgallery1' do
+        =image_tag "http://cs616516.vk.me/v616516633/1c4d9/Zg5O6vJGASs.jpg"
+    .element#box
+      =link_to  "http://cs616516.vk.me/v616516633/1c4e1/MtPJXzgpVAw.jpg", class: 'zoombox zgallery1' do 
+        =image_tag "http://cs616516.vk.me/v616516633/1c4e1/MtPJXzgpVAw.jpg"
+    .element#box
+      =link_to  "http://cs616516.vk.me/v616516633/1c4f1/s44r_NlkugU.jpg", class: 'zoombox zgallery1' do
+        =image_tag "http://cs616516.vk.me/v616516633/1c4f1/s44r_NlkugU.jpg"
+    .element#box
+      =link_to  "http://cs616516.vk.me/v616516633/1c4f9/ZlnC8FvwHKI.jpg", class: 'zoombox zgallery1' do 
+        =image_tag "http://cs616516.vk.me/v616516633/1c4f9/ZlnC8FvwHKI.jpg" 
+    .element#box
+      =link_to  "http://cs616516.vk.me/v616516633/1c501/zUSpVAcTnYc.jpg", class: 'zoombox zgallery1' do 
+        =image_tag "http://cs616516.vk.me/v616516633/1c501/zUSpVAcTnYc.jpg" 
