--- a/source/photo/scene.html.haml
+++ b/source/photo/scene.html.haml
@@ -1,25 +1,54 @@
 ---
 title: 'Фотоработы: сцена'
-body_class: photo
+body_class: photo-scene
 ---
 
 %section.photo-section
-  %h4.section-name Фото/сцена
+  %h4.section-name Фотоработы/сцена
 
-  .pure-g
-    .pure-u-1-2.pure-u-lg-1-4
-      =image_tag lorem.image('1000x1000'), class: 'pure-img-responsive'
-    .pure-u-1-2.pure-u-lg-1-4
-      =image_tag lorem.image('1000x1000'), class: 'pure-img-responsive'
-    .pure-u-1-2.pure-u-lg-1-4
-      =image_tag lorem.image('1000x1000'), class: 'pure-img-responsive'
-    .pure-u-1-2.pure-u-lg-1-4
-      =image_tag lorem.image('1000x1000'), class: 'pure-img-responsive'
-    .pure-u-1-2.pure-u-lg-1-4
-      =image_tag lorem.image('1000x1000'), class: 'pure-img-responsive'
-    .pure-u-1-2.pure-u-lg-1-4
-      =image_tag lorem.image('1000x1000'), class: 'pure-img-responsive'
-    .pure-u-1-2.pure-u-lg-1-4
-      =image_tag lorem.image('1000x1000'), class: 'pure-img-responsive'
-    .pure-u-1-2.pure-u-lg-1-4
-      =image_tag lorem.image('1000x1000'), class: 'pure-img-responsive'
+  #container
+    .element#box
+      =link_to  "http://cs616516.vk.me/v616516633/1c3d3/CSwYFnY7nqA.jpg", class: 'zoombox zgallery1' do
+        =image_tag  "http://cs616516.vk.me/v616516633/1c3d3/CSwYFnY7nqA.jpg"
+    .element#box
+      =link_to  "http://cs616516.vk.me/v616516633/1c3db/mnR9igTZvzw.jpg", class: 'zoombox zgallery1' do 
+        =image_tag  "http://cs616516.vk.me/v616516633/1c3db/mnR9igTZvzw.jpg"
+    .element#box
+      =link_to  "http://cs616516.vk.me/v616516633/1c3e3/vByuQKSO6dQ.jpg", class: 'zoombox zgallery1' do
+        =image_tag  "http://cs616516.vk.me/v616516633/1c3e3/vByuQKSO6dQ.jpg"
+    .element#box
+      =link_to  "http://cs616516.vk.me/v616516633/1c3eb/7sUZpeg2ha4.jpg", class: 'zoombox zgallery1' do
+        =image_tag  "http://cs616516.vk.me/v616516633/1c3eb/7sUZpeg2ha4.jpg"
+    .element#box
+      =link_to  "http://cs616516.vk.me/v616516633/1c3cb/63F6zOCaYdI.jpg", class: 'zoombox zgallery1' do 
+        =image_tag  "http://cs616516.vk.me/v616516633/1c3cb/63F6zOCaYdI.jpg"
+    .element#box
+      =link_to  "http://cs616516.vk.me/v616516633/1c3f3/x4dSBuCCjaA.jpg", class: 'zoombox zgallery1' do
+        =image_tag  "http://cs616516.vk.me/v616516633/1c3f3/x4dSBuCCjaA.jpg" 
+    .element#box
+      =link_to  "http://cs616516.vk.me/v616516633/1c3fb/3rh2Epo2tJM.jpg", class: 'zoombox zgallery1' do
+        =image_tag  "http://cs616516.vk.me/v616516633/1c3fb/3rh2Epo2tJM.jpg"
+    .element#box
+      =link_to  "http://cs616516.vk.me/v616516633/1c404/SRSKXNzkmC4.jpg", class: 'zoombox zgallery1' do
+        =image_tag  "http://cs616516.vk.me/v616516633/1c404/SRSKXNzkmC4.jpg"
+    .element#box
+      =link_to  "http://cs616516.vk.me/v616516633/1c416/RR8s93vuPVo.jpg", class: 'zoombox zgallery1' do 
+        =image_tag  "http://cs616516.vk.me/v616516633/1c416/RR8s93vuPVo.jpg"
+    .element#box
+      =link_to  "http://cs616516.vk.me/v616516633/1c39b/88uHgYDE6NY.jpg", class: 'zoombox zgallery1' do
+        =image_tag  "http://cs616516.vk.me/v616516633/1c39b/88uHgYDE6NY.jpg"
+    .element#box
+      =link_to  "http://cs616516.vk.me/v616516633/1c3a3/nqNqp1MO5yg.jpg", class: 'zoombox zgallery1' do 
+        =image_tag  "http://cs616516.vk.me/v616516633/1c3a3/nqNqp1MO5yg.jpg" 
+    .element#box
+      =link_to  "http://cs616516.vk.me/v616516633/1c3ab/fysbsBB9W74.jpg", class: 'zoombox zgallery1' do
+        =image_tag  "http://cs616516.vk.me/v616516633/1c3ab/fysbsBB9W74.jpg"
+    .element#box
+      =link_to  "http://cs616516.vk.me/v616516633/1c3b3/CUrkPHZ44GA.jpg", class: 'zoombox zgallery1' do
+        =image_tag  "http://cs616516.vk.me/v616516633/1c3b3/CUrkPHZ44GA.jpg"
+    .element#box
+      =link_to  "http://cs616516.vk.me/v616516633/1c3bb/se5uo8HDhNo.jpg", class: 'zoombox zgallery1' do 
+        =image_tag  "http://cs616516.vk.me/v616516633/1c3bb/se5uo8HDhNo.jpg"
+    .element#box
+      =link_to  "http://cs616516.vk.me/v616516633/1c3c3/B_lTs8IQatY.jpg", class: 'zoombox zgallery1' do
+        =image_tag  "http://cs616516.vk.me/v616516633/1c3c3/B_lTs8IQatY.jpg"
