--- a/source/photo/sport.html.haml
+++ b/source/photo/sport.html.haml
@@ -1,25 +1,27 @@
 ---
 title: 'Фотоработы: спорт'
-body_class: photo
+body_class: photo-sport
 ---
 
 %section.photo-section
-  %h4.section-name Фото/спорт
+  %h4.section-name Фотоработы/спорт
 
-  .pure-g
-    .pure-u-1-2.pure-u-lg-1-4
-      =image_tag lorem.image('1000x1000'), class: 'pure-img-responsive'
-    .pure-u-1-2.pure-u-lg-1-4
-      =image_tag lorem.image('1000x1000'), class: 'pure-img-responsive'
-    .pure-u-1-2.pure-u-lg-1-4
-      =image_tag lorem.image('1000x1000'), class: 'pure-img-responsive'
-    .pure-u-1-2.pure-u-lg-1-4
-      =image_tag lorem.image('1000x1000'), class: 'pure-img-responsive'
-    .pure-u-1-2.pure-u-lg-1-4
-      =image_tag lorem.image('1000x1000'), class: 'pure-img-responsive'
-    .pure-u-1-2.pure-u-lg-1-4
-      =image_tag lorem.image('1000x1000'), class: 'pure-img-responsive'
-    .pure-u-1-2.pure-u-lg-1-4
-      =image_tag lorem.image('1000x1000'), class: 'pure-img-responsive'
-    .pure-u-1-2.pure-u-lg-1-4
-      =image_tag lorem.image('1000x1000'), class: 'pure-img-responsive'
+  #container
+    .element#box
+      =link_to  "http://cs620031.vk.me/v620031633/edf3/zqAmToIOj68.jpg", class: 'zoombox zgallery1' do 
+        =image_tag "http://cs620031.vk.me/v620031633/edf3/zqAmToIOj68.jpg"  
+    .element#box
+      =link_to  "http://cs620031.vk.me/v620031633/edea/Csrk7ZjPDPI.jpg", class: 'zoombox zgallery1' do
+        =image_tag "http://cs620031.vk.me/v620031633/edea/Csrk7ZjPDPI.jpg"  
+    .element#box
+      =link_to  "http://cs616516.vk.me/v616516633/1c426/g_0zHeKrVUM.jpg", class: 'zoombox zgallery1' do
+        =image_tag "http://cs616516.vk.me/v616516633/1c426/g_0zHeKrVUM.jpg"  
+    .element#box
+      =link_to  "http://cs616516.vk.me/v616516633/1c42e/PVCG-sx0xVI.jpg", class: 'zoombox zgallery1' do 
+        =image_tag "http://cs616516.vk.me/v616516633/1c42e/PVCG-sx0xVI.jpg"  
+    .element#box
+      =link_to  "http://cs616516.vk.me/v616516633/1c41e/aaL2Ea7NrVQ.jpg", class: 'zoombox zgallery1' do
+        =image_tag "http://cs616516.vk.me/v616516633/1c41e/aaL2Ea7NrVQ.jpg"  
+    .element#box
+      =link_to  "http://cs616516.vk.me/v616516633/1c436/B4lT_rW6C8U.jpg", class: 'zoombox zgallery1' do
+        =image_tag "http://cs616516.vk.me/v616516633/1c436/B4lT_rW6C8U.jpg"  
